# bluccino-tutorial

./: Bluccino-v1.1.0.md  README.md
lessons/01-quicktour/01-hello/: CMakeLists.txt  README.md  prj.conf
lessons/01-quicktour/02-blink/: CMakeLists.txt  README.rst
lessons/01-quicktour/02-blink/src/: main.c
lessons/01-quicktour/03-button/: CMakeLists.txt  README.rst
lessons/01-quicktour/03-button/src/: main.c
lessons/01-quicktour/04-rgbcycle/: CMakeLists.txt  README.rst  prj.conf
lessons/01-quicktour/04-rgbcycle/src/: main.c
lessons/01-quicktour/05-blinker/: CMakeLists.txt  README.rst
lessons/01-quicktour/05-blinker/src/: main.c
lessons/01-quicktour/06-ledtoggle/: CMakeLists.txt  README.rst
lessons/01-quicktour/06-ledtoggle/src/: main.c
lessons/01-quicktour/07-nvm/: CMakeLists.txt  README.rst  prj.conf
lessons/01-quicktour/07-nvm/src/: main.c
lessons/01-quicktour/08-attention/: CMakeLists.txt  README.rst
lessons/01-quicktour/08-attention/src/: main.c
lessons/01-quicktour/09-clisrv/: CMakeLists.txt  README.rst
lessons/01-quicktour/09-clisrv/src/: main.c
lessons/01-quicktour/10-ui/: CMakeLists.txt  README.md  prj.conf
lessons/01-quicktour/10-ui/src/: blink.c  blink.h  main.c
lessons/01-quicktour/11-sequence/: CMakeLists.txt  README.md
lessons/01-quicktour/11-sequence/src/: main.c
lessons/02-messaging/01-blink/: CMakeLists.txt  README.md
lessons/02-messaging/01-blink/src/: main.c
lessons/02-messaging/02-toggle/: CMakeLists.txt  README.md
lessons/02-messaging/02-toggle/src/: main.c  toggle.b
lessons/02-messaging/03-individual/: CMakeLists.txt  README.md
lessons/02-messaging/03-individual/src/: main.c
lessons/02-messaging/04-light/: CMakeLists.txt  README.md  prj.conf
lessons/02-messaging/04-light/src/: main.c
lessons/02-messaging/05-roulette/: CMakeLists.txt  README.md  prj.conf
lessons/02-messaging/05-roulette/src/: main.c  main.h
lessons/02-messaging/06-sos/: CMakeLists.txt  README.md
lessons/02-messaging/06-sos/src/: main.c
lessons/03-meshfun/01-clisrv/: CMakeLists.txt  README.md
lessons/03-meshfun/01-clisrv/src/: main.c
lessons/03-meshfun/02-swicli/: CMakeLists.txt  README.rst  prj.conf
lessons/03-meshfun/02-swicli/src/: main.c
lessons/03-meshfun/03-ledsrv/: CMakeLists.txt  README.rst  prj.conf
lessons/03-meshfun/03-ledsrv/src/: main.c
lessons/03-meshfun/04-meshnvm/: CMakeLists.txt  README.md
lessons/03-meshfun/04-meshnvm/src/: main.c
lessons/03-meshfun/05-setlet/: CMakeLists.txt  README.md
lessons/03-meshfun/05-setlet/src/: main.c
lessons/03-meshfun/06-meshnode/: CMakeLists.txt  README.md  prj.conf
lessons/03-meshfun/06-meshnode/src/: main.c
lessons/03-meshfun/07-spool/: CMakeLists.txt  README.rst
lessons/03-meshfun/07-spool/src/: main.c
lessons/03-meshfun/08-onoff-app/: README.rst
lessons/03-meshfun/08-onoff-app/boards/: nrf52840dk_nrf52840.conf  nrf52dk_nrf52832.conf
lessons/04-blestuff/01-advertise/: CMakeLists.txt  README.md  prj.conf
lessons/04-blestuff/01-advertise/src/: advsvc.c  advsvc.h  app.c  app.h  main.c  main.h
lessons/04-blestuff/02-ebeacon/: CMakeLists.txt  README.md  prj.conf
lessons/04-blestuff/02-ebeacon/src/: app.c  app.h  main.c  main.h
lessons/04-blestuff/03-ibeacon/: CMakeLists.txt  README.md  prj.conf
lessons/04-blestuff/03-ibeacon/src/: main.c  main.h
lessons/04-blestuff/04-cbeacon/: CMakeLists.txt  README.md  prj.conf
lessons/04-blestuff/04-cbeacon/src/: cbeacon.c  cbeacon.h  main.c  main.h
lessons/04-blestuff/05-gatt-dis/: CMakeLists.txt  README.md  prj.conf
lessons/04-blestuff/05-gatt-dis/src/: app.c  main.c  main.h
lessons/04-blestuff/06-gatt-bas/: CMakeLists.txt  README.md  prj.conf
lessons/04-blestuff/06-gatt-bas/src/: app.c  main.c  main.h
lessons/04-blestuff/07-nandsvc/: CMakeLists.txt  README.md  prj.conf
lessons/04-blestuff/07-nandsvc/src/: app.c  app.h  main.c  main.h  nandsvc.c  nandsvc.h
lib/v1.1.0/: README.md
lib/v1.1.0/app/01-bluccino/: CMakeLists.txt  README.md  prj.conf
lib/v1.1.0/app/01-bluccino/src/: main.c
lib/v1.1.0/bluccino/: bl_app.h  bl_blue.h  bl_class.h  bl_core.c  bl_core.h  bl_deco.c  bl_deco.h  bl_defs.h  bl_gear.c  bl_gear.h  bl_gonoff.h  bl_gpio.h  bl_hw.h  bl_ifc.h  bl_lib.c  bl_lib.h  bl_log.c  bl_log.h  bl_log.lock.c  bl_log.lock.h  bl_main.c  bl_mesh.c  bl_mesh.h  bl_msg.h  bl_rtl.c  bl_rtl.h  bl_rtos.h  bl_run.c  bl_run.h  bl_sugar.h  bl_symb.h  bl_time.c  bl_time.h  bl_timer.c  bl_timer.h  bl_type.h  bl_util.h  bl_vers.h  bl_wl.h  bl_work.c  (+4 more)
lib/v1.1.0/bluccino/ifc/: button.h  digital.h  io.h  led.h  nvm.h  switch.h  sys.h
lib/v1.1.0/core/hwcore/hwio/: bl_hw.c  bl_hwio.c  bl_hwio.cpp  bl_hwio.h
lib/v1.1.0/core/hwcore/hwstd/: bl_hw.c  bl_hwbut.c  bl_hwbut.h  bl_hwled.c  bl_hwled.h  bl_hwnvm.c
lib/v1.1.0/core/hwcore/hwtiny/: bl_hw.c  bl_hwbut.c  bl_hwbut.h  bl_hwled.c
lib/v1.1.0/core/wlcore/bttiny/: bl_ble.c  bl_ble.h  bl_wl.c
lib/v1.1.0/core/wlcore/wlstd/: bl_dcomp.c  bl_dcomp.h  bl_reset.c  bl_wl.c  ble_mesh.c  ble_mesh.h  publisher.c  state_binding.c  storage.c  storage.h  transition.c
lib/v1.1.0/core/wlcore/wltiny/: bl_wl.c
lib/v1.1.0/driver/: bl_ring.c  bl_ring.h  bl_spi.c  bl_spi.h  bl_uart.c  bl_uart.h  bl_vl6180x.c  bl_vl6180x.h
lib/v1.1.0/module/: bl_node.c  bl_node.h  bl_spool.c  bl_spool.h
lib/v1.1.0/service/: bl_bas.c  bl_bas.h  bl_cts.c  bl_cts.h  bl_dis.c  bl_dis.h  bl_eddy.c  bl_eddy.h  bl_hrs.c  bl_hrs.h  bl_ibeacon.c  bl_ibeacon.h
lib/v1.1.0/util/: bl_chart.c  bl_chart.h  bl_flow.c  bl_flow.h  bl_lisp.c  bl_lisp.h  bl_unit.c  bl_unit.h
